--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>URL Shortener</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
 </head>
 
@@ -15,14 +16,19 @@
                 <h1>Prayuj's URL Shortener</h1>
                 <form id="url-form">
                     <label>URL to Shorten</label>
-                    <input type="url" name="url" placeholder="URL to Shorten" required>
+                    <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required>
                     <label>Custom URL</label>
-                    <input type="text" name="title" placeholder="Custom URL">
-                    <button type="submit" class="btn btn-primary">Shorten</button>
+                    <input class="form-control" type="text" name="title" placeholder="Custom URL">
+                    <button type="submit" id="submit-button" class="btn btn-primary">Shorten</button>
                 </form>
             </div>
-            <div class="col">
-                Result
+        </div>
+        <div class="row">
+            <div class="col" id="result">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" id="table">
             </div>
         </div>
 
