--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>URL Shortener</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -10,8 +11,8 @@
 </head>
 
 <body>
-    <div class="container-md">
-        <div class="row">
+    <div class="container">
+        <div class="row align-items-center">
             <div class="col">
                 <h1>Prayuj's URL Shortener</h1>
                 <form id="url-form">
@@ -23,11 +24,11 @@
                 </form>
             </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col" id="result">
             </div>
         </div>
-        <div class="row">
+        <div class="row align-items-center">
             <div class="col" id="table">
             </div>
         </div>
