--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link href="./css/index.css" rel="stylesheet">
 
 </head>
 
@@ -17,9 +18,10 @@
                 <h1>Prayuj's URL Shortener</h1>
                 <form id="url-form">
                     <label>URL to Shorten</label>
-                    <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required>
+                    <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required
+                        autocomplete="off">
                     <label>Custom URL</label>
-                    <input class="form-control" type="text" name="title" placeholder="Custom URL">
+                    <input class="form-control" type="text" name="title" placeholder="Custom URL" autocomplete="off">
                     <button type="submit" id="submit-button" class="btn btn-primary">Shorten</button>
                 </form>
             </div>
