--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
-                <h1>Prayuj's URL Shortener</h1>
+                <h1 class="title">Prayuj's URL Shortener</h1>
                 <form id="url-form">
                     <label>URL to Shorten</label>
                     <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required
                         autocomplete="off">
-                    <label>Custom URL</label>
-                    <input class="form-control" type="text" name="title" placeholder="Custom URL" autocomplete="off">
+                    <label>Custom Title</label>
+                    <input class="form-control" type="text" name="title" placeholder="Custom Title" autocomplete="off">
                     <button type="submit" id="submit-button" class="btn btn-primary">Shorten</button>
                 </form>
             </div>
