updated copy function

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
             </div>
         </div>
         <div class="row align-items-center">
+            <div class="col" id="copy-message">
+            </div>
+        </div>
+        <div class="row align-items-center">
             <div class="col" id="table">
             </div>
         </div>
