--- a/public/index.html
+++ b/public/index.html
@@ -13,34 +13,28 @@
 
 <body>
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col">
-                <h1 class="title">Prayuj's URL Shortener</h1>
-                <form id="url-form">
-                    <label>URL to Shorten</label>
-                    <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required
-                        autocomplete="off">
-                    <label>Custom Title</label>
-                    <input class="form-control" type="text" name="title" placeholder="Custom Title" autocomplete="off">
-                    <button type="submit" id="submit-button" class="btn btn-primary">Shorten</button>
-                </form>
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col" id="result">
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col" id="copy-message">
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col" id="table">
-            </div>
-        </div>
-
+        <h1 class="title">Prayuj's URL Shortener</h1>
+        <form id="key-form">
+            <input class="form-control" type="text" name="key" placeholder="Private Key" required autocomplete="off">
+            <button type="submit" id="submit-button" class="btn btn-primary">Enter</button>
+        </form>
     </div>
 </body>
-<script type="text/javascript" src="/js/index.js"></script>
+
+
+<script type="text/javascript">
+    document.getElementById('key-form').onsubmit = function (event) {
+        event.preventDefault();
+        setCookie('key', event.target.key.value, 365)
+        window.location.href = '/'
+    }
+
+    function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+        var expires = "expires=" + d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+</script>
 
 </html>
