--- a/private/index.html
+++ b/private/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="row align-items-center">
-            <div class="col" id="result">
+            <div class="col display-flex" id="result">
             </div>
         </div>
         <div class="row align-items-center">
