--- a/404/index.html
+++ b/404/index.html
@@ -38,8 +38,7 @@
         <div class="row justify-content-center">
             <div class="col-fluid">
                 <h1 class="title">404 - Not Found</h1>
-                <h2>Could not redirect to <span id="target"></span>.</h2>
-                <p>Contact Prayuj and tell him to get his act together!</p>
+                <p>Could not redirect to <span id="target"></span>.</p>
             </div>
         </div>
     </div>
