--- a/private/index.html
+++ b/private/index.html
@@ -14,8 +14,19 @@
 <body>
     <div class="container">
         <div class="row align-items-center">
-            <div class="col">
+            <div class="col-10">
                 <h1 class="title">Prayuj's URL Shortener</h1>
+            </div>
+            <div class="col">
+                <a href="/logs">
+                    <button class="btn-sm btn-secondary">
+                        <i class="fas fa-print"></i>
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col">
                 <form id="url-form">
                     <label>URL to Shorten</label>
                     <input class="form-control" type="url" name="url" placeholder="URL to Shorten" required
@@ -38,7 +49,6 @@
             <div class="col" id="table">
             </div>
         </div>
-
     </div>
 </body>
 <script type="text/javascript" src="./js/index.js"></script>
