--- a/login/index.html
+++ b/login/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>URL Shortener</title>
+    <link rel="icon" type="image/png"
+        href="https://static.vecteezy.com/system/resources/previews/001/218/821/original/chain-link-icon-on-green-circle-graphic-illustration-vector.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
